# vitality

./: CMakeLists.txt  LICENSE  README.md  Vitality.hpp
.github/workflows/: ci.yml
examples/: asio_multicast_dispatch.cpp  basic.cpp  decode_format.cpp  dispatch.cpp  fixed_i16_to_f32.cpp  socket.cpp
include/vitality/: vitality.hpp
tests/: dropin_header_tests.cpp  vitality_tests.cpp
